# crew_ai

customer_support_agent/: README.md  pyproject.toml
customer_support_agent/src/customer_support_agent/: crew.py  main.py
research_agent/: pyproject.toml
research_agent/src/research_agent/: llm.py  main.py  tasks.py
research_agent/src/research_agent/agents/: __init__.py  editor.py  planner.py  writer.py
