[project]
name = "customer-support-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Suryansh",email = "surushakya@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "customer_support_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
