[project]
name = "customer_support_agent"
version = "0.1.0"
description = "customer_support_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
customer_support_agent = "customer_support_agent.main:run"
run_crew = "customer_support_agent.main:run"
train = "customer_support_agent.main:train"
replay = "customer_support_agent.main:replay"
test = "customer_support_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
