[project]
name = "research-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Suryansh Shakya",email = "surushakya@proton.me"}
]
readme = "README.md"
requires-python = '>=3.12,<3.13'
dependencies = [
    "crewai (>=0.119.0,<0.120.0)"
]

[tool.poetry]
packages = [{include = "research_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
